# acr

./: Cargo.toml  README.md
src/: compression.rs  encryption.rs  external.rs  hash.rs  lib.rs  time.rs
src/compression/: algorithms.rs  compressor.rs  decompressor.rs  formats.rs
src/compression/algorithms/: deflate-zlib.rs  deflate.rs  lzma.rs
src/compression/formats/: hssp.rs  zip.rs
src/encryption/: sha256cbc.rs
src/hash/: murmur3.rs  sha256.rs
