[package]
name = "acr"
description = "All shared code across the whole Acridotheres project"
license = "MIT"
repository = "https://github.com/acridotheres/acr"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crc32fast = "1.4.2"
dh = "0.7.2"
libaes = "0.7.0"
murmur3 = "0.5.2"
sha2 = "0.10.8"
