[package]
name = "acr"
description = "All shared code across the whole Acridotheres project"
license = "MIT"
repository = "https://github.com/acridotheres/acr"
version = "0.4.2"
edition = "2021"

[dependencies]
chrono = "0.4.39"
crc32fast = "1.4.2"
deflate = "1.0.0"
dh = "0.8.1"
inflate = "0.4.5"
libaes = "0.7.0"
lzma-rs = "0.3.0"
murmur3 = "0.5.2"
sha2 = "0.10.8"
